--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,11 @@ luac.out
 *.x86_64
 *.hex
 
+### VisualStudioCode ###
+.vscode/*
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
+
 *.todo
